[package]
name = "market-db"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/market_db.rs"

[dependencies.multiversx-sc]
version = "0.46.0"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.46.0"

[workspace]
members = [
    ".",
    "meta",
]
